# repo_plus

./: .cursorrules  .gitignore  LICENSE  Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  configure~
.agents/rules/: c_project.md
agents/rules/: autotools.md  repo_plus.md
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  color.c  color.h  git_ops.c  git_ops.h  main.c  manifest.c  manifest.h  tasks.c  tasks.h
src/.deps/: repo_plus-git_ops.Po  repo_plus-main.Po  repo_plus-manifest.Po  repo_plus-tasks.Po
src/cmd/: cmd.h  cmd_branches.c  cmd_checkout.c  cmd_cherry_pick.c  cmd_download.c  cmd_forall.c  cmd_grep.c  cmd_info.c  cmd_init.c  cmd_misc.c  cmd_others.c  cmd_prune.c  cmd_rebase.c  cmd_stage.c  cmd_status.c  cmd_sync.c  cmd_upload.c
src/cmd/.deps/: repo_plus-cmd_branches.Po  repo_plus-cmd_checkout.Po  repo_plus-cmd_cherry_pick.Po  repo_plus-cmd_download.Po  repo_plus-cmd_forall.Po  repo_plus-cmd_grep.Po  repo_plus-cmd_info.Po  repo_plus-cmd_init.Po  repo_plus-cmd_misc.Po  repo_plus-cmd_others.Po  repo_plus-cmd_prune.Po  repo_plus-cmd_rebase.Po  repo_plus-cmd_stage.Po  repo_plus-cmd_status.Po  repo_plus-cmd_sync.Po  repo_plus-cmd_upload.Po
test/: run_tests.sh  setup_test_env.sh
